[tool.poetry]
name = "coursework-6-skymarket-main 17-41-41"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "coursework_6_skymarket_main 17"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.5"
djangorestframework-simplejwt = "^5.2.2"
pytest-factoryboy = "^2.5.1"
pytest-django = "^4.5.2"
drf-spectacular = "^0.25.1"
python-dateutil = "^2.8.2"
gunicorn = "^20.1.0"
django-cors-headers = "^3.13.0"
pillow = "^9.4.0"
djoser = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
